# GoBot

./: CMakeLists.txt  PrintVariables.cmake  Readme.md
includes/: Brain.hpp  BrainState.hpp  Button.hpp  Coord2D.hpp  DataStore.hpp  Edge.hpp  Fact.hpp  FactRelevence.hpp  FeedBackButton.hpp  GOL.hpp  GUIElem.hpp  GoBot.hpp  GoBotWin.hpp  GoBrain.hpp  GoNet.hpp  GoNode.hpp  Heuristic.hpp  LTexture.hpp  Label.hpp  Line.hpp  MetaBrain.hpp  Net.hpp  NetBuildArea.hpp  NetFlux.h  Node.hpp  QuadBox.hpp  QuadTree.hpp  SDLWindow.hpp  Screen.hpp  ScreenText.h  Sensor.hpp  SensorData.hpp  SensorWindow.hpp  ThreadPool.hpp  Utils.hpp  Vector2D.hpp  aNet.hpp  iNet.hpp  tinyfiledialogs.hpp
includes/sdldraw/: Border.hpp  Button.hpp  DrawPolygon.hpp  Label.hpp  Polygon.hpp  Rectangle.hpp  TextEntry.hpp
sdl_gfx/: CMakeLists.txt  SDL2_gfxPrimitives.c  SDL2_gfxPrimitives.h  SDL2_gfxPrimitives_font.h  SDL2_imageFilter.c  SDL2_rotozoom.h
src/: Brain.cpp  BrainState.cpp  Coord2D.cpp  DataStore.cpp  Edge.cpp  Fact.cpp  FactRelevence.cpp  FeedBackButton.cpp  GOL.cpp  GoBot.cpp  GoBotWin.cpp  GoNode.cpp  Heuristic.cpp  LTexture.cpp  MetaBrain.cpp  Net.cpp  NetBuildArea.cpp  NetFlux.cpp  Node.cpp  SDLWindow.cpp  Screen.cpp  ScreenText.cpp  Sensor.cpp  SensorData.cpp  SensorWindow.cpp  ThreadPool.cpp  Utils.cpp  aNet.cpp  iNet.cpp  main.cpp  tinyfiledialogs.cpp
src/webserver/: file_handler.cpp
www/: fun.html  index.html
